argocd-app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pipelines-vote-ui
  namespace: pipeline-test
  labels:
    app: pipelines-vote-ui
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30173
  selector:
    app: pipelines-vote-ui
  type: NodePort
  sessionAffinity: None
  externalTrafficPolicy: Cluster
