argocd-app/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: pipelines-vote-ui
  namespace: pipeline-test
  labels:
    app: pipelines-vote-ui
spec:
  host: pipelines-vote-ui-pipeline-test.apps.cluster-ae1a.sandbox216.opentlc.com
  to:
    kind: Service
    name: pipelines-vote-ui
    weight: 100
  port:
    targetPort: 8080-tcp
  wildcardPolicy: None
